[gd_scene load_steps=2 format=2]

[ext_resource path="res://GUI.gd" type="Script" id=1]

[node name="GUI" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 984.0
margin_bottom = 560.0
custom_constants/separation = 150

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 984.0
margin_bottom = 14.0
custom_constants/separation = 150
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthCounter" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 241.0
margin_right = 303.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/HealthCounter"]
margin_right = 50.0
margin_bottom = 14.0
text = "Health: "

[node name="Value" type="Label" parent="VBoxContainer/HBoxContainer/HealthCounter"]
margin_left = 54.0
margin_right = 62.0
margin_bottom = 14.0
text = "5"

[node name="SpeedCounter" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 453.0
margin_right = 524.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/SpeedCounter"]
margin_right = 43.0
margin_bottom = 14.0
text = "Speed:"

[node name="Value" type="Label" parent="VBoxContainer/HBoxContainer/SpeedCounter"]
margin_left = 47.0
margin_right = 71.0
margin_bottom = 14.0
text = "100"

[node name="PointCounter" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 674.0
margin_right = 742.0
margin_bottom = 14.0
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PointCounter"]
margin_right = 48.0
margin_bottom = 14.0
text = "Points: "

[node name="Value" type="Label" parent="VBoxContainer/HBoxContainer/PointCounter"]
margin_left = 52.0
margin_right = 68.0
margin_bottom = 14.0
text = "20"

[node name="Message" type="Label" parent="VBoxContainer"]
margin_top = 164.0
margin_right = 984.0
margin_bottom = 178.0
text = "Message!"
align = 1
